Add new picture for hompegae

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,7 @@
                             <div class="image-container">
                                 {% if "placeholder" in post.featured_image.url %}
                                 <img class="card-img-top"
-                                    src="/workspace/django-project/static/images/logo.png">
-                                {% else %}
+                                    src="https://static.wixstatic.com/media/6761e5_14929b34a9d4479d80eed9072c916e9a~mv2.jpg">
                                 <img class="card-img-top" src=" {{ post.featured_image.url }}">
                                 {% endif %}
                                 <div class="image-flash">
